Getting Webpage going

--- a/solution-code/index.html
+++ b/solution-code/index.html
@@ -5,27 +5,28 @@
       <meta name="description" content="Your description goes here">
       <meta name="keywords" content="one, two, three">
 
-    <title>Joe Johnson | Portfolio</title>
+      <title>Jim Tekanyo | Portfolio</title>
 
-    <!-- external CSS link -->
+      <!-- external CSS link -->
 
-    <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body>
     <nav>
       <strong>About Me</strong>
-      |
+
       <a href="portfolio.html">Portfolio</a>
     </nav>
 
-    <h1>Joe Johnson</h1>
+
+    <h1>Jim Tekanyo</h1>
 
     <hr>
 
-    <img src="https://www.libstash.com/public/avatars/default.png" alt="Avatar">
+    <img src="http://i.imgur.com/TBdPYBO.jpg" alt "jim">
     <h3>I Enjoy Life as a Developer</h3>
-    <p>I'm Joe Johnson, a Developer based in NYC.  I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites. </p>
+    <p>I'm Jim Tekanyo, a developer based in SF.I Have 12 months of experience as Web Developer, Specializing in the creation of responsive websites. </p>
 
     <hr>
 
