--- a/solution-code/portfolio.html
+++ b/solution-code/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Your description goes here">
     <meta name="keywords" content="one, two, three">
-    <title>Joe Johnson | Portfolio</title>
+    <title>Jim Tekanyo | Portfolio</title>
 
     <!-- external CSS link -->
 
@@ -18,7 +18,7 @@
       <strong>Portfolio</strong>
     </nav>
 
-    <h1>Joe Johnson</h1>
+    <h1>Jim Tekanyo</h1>
 
     <hr>
 
@@ -53,8 +53,8 @@
 
     <ul>
       <li><strong>General Assembly</strong> — FEWD 2015</li>
-      <li><strong>College of Soft Knocks</strong> — B.S. 2009</li>
-      <li><strong>School of Hard Knocks</strong> — 2005 (Honors)</li>
+      <li><strong>Boston College</strong> — B.S. 2009</li>
+      <li><strong>Orapa High School</strong> — 2005 (Honors)</li>
     </ul>
 
     <hr>
